add frontend with ajax for search form

--- a/analyzer_server_71.ipynb
+++ b/analyzer_server_71.ipynb
@@ -58,8 +58,14 @@
     "        data = request.json\n",
     "        text = data[\"text\"]\n",
     "        \n",
-    "        lang = json.loads(requests.post('http://127.0.0.1:13567/lang_detect', json={'text' : text}).text)['lang']\n",
-    "        stemmed_words = json.loads(requests.post('http://127.0.0.1:13566/stemmer', json={'text' : text}).text)['stemmed_words']\n",
+    "        lang = json.loads(requests.post('http://127.0.0.1:13567/lang_detect',\n",
+    "                                        json={'text' : text}).text)['lang']\n",
+    "        \n",
+    "        stemmed_words = json.loads(requests.post('http://127.0.0.1:13566/stemmer',\n",
+    "                                                 json={'text' : text}).text)['stemmed_words']\n",
+    "        \n",
+    "        filtered_words = [word for word in word_list if word not in stopwords.words('english')]\n",
+    "        \n",
     "        return json.dumps({'status':'ok', 'lang': lang, 'stemmed_words': stemmed_words})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
