--- a/lang_detect_client.ipynb
+++ b/lang_detect_client.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-07T15:57:42.693993Z",
-     "start_time": "2018-11-07T15:57:42.680063Z"
-    }
+     "end_time": "2018-11-07T23:27:14.545768Z",
+     "start_time": "2018-11-07T23:27:14.473004Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -24,7 +25,7 @@
     "import json\n",
     "\n",
     "\n",
-    "r = requests.get('http://127.0.0.1:13571')\n",
+    "r = requests.get('http://127.0.0.1:13566')\n",
     "# r = requests.get('http://0.0.0.0:13567')\n",
     "print(r.status_code)\n",
     "print(r.text)"
@@ -51,6 +52,35 @@
    ],
    "source": [
     "r = requests.post('http://127.0.0.1:13571/analyze', json={\"text\": \"How are you doing?\", \"meta\":\"lalka\"})\n",
+    "print(r.status_code)\n",
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-07T22:46:49.902698Z",
+     "start_time": "2018-11-07T22:46:49.884695Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n",
+      "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 3.2 Final//EN\">\n",
+      "<title>500 Internal Server Error</title>\n",
+      "<h1>Internal Server Error</h1>\n",
+      "<p>The server encountered an internal error and was unable to complete your request.  Either the server is overloaded or there is an error in the application.</p>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = requests.post('http://127.0.0.1:13568/search', json={\"text\": \"How are you doing?\", \"meta\":\"lalka\"})\n",
     "print(r.status_code)\n",
     "print(r.text)"
    ]
