--- a/stemmer_server66.ipynb
+++ b/stemmer_server66.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-07T15:57:21.696Z"
+     "start_time": "2018-11-07T22:29:43.525Z"
     },
     "scrolled": true
    },
@@ -26,7 +26,21 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [07/Nov/2018 17:57:44] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [08/Nov/2018 00:30:28] \"\u001b[37mGET /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GET\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Nov/2018 00:30:44] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
