--- a/search_server_68.ipynb
+++ b/search_server_68.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-07T12:55:51.824Z"
+     "start_time": "2018-11-07T23:13:59.683Z"
     },
     "scrolled": true
    },
@@ -26,12 +26,19 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [07/Nov/2018 14:55:54] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [07/Nov/2018 14:55:58] \"\u001b[37mGET /?job= HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [07/Nov/2018 14:55:59] \"\u001b[37mGET /?job= HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [07/Nov/2018 14:56:00] \"\u001b[37mGET /?job= HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [07/Nov/2018 14:56:05] \"\u001b[37mGET /?job= HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [07/Nov/2018 14:56:06] \"\u001b[37mGET /?job= HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [08/Nov/2018 01:14:03] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Nov/2018 01:21:29] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Nov/2018 01:21:32] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Nov/2018 01:21:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Nov/2018 01:26:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Nov/2018 01:26:22] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text': 'sdsdjknsc'}\n"
      ]
     }
    ],
@@ -55,6 +62,8 @@
     "def lang_detect():\n",
     "    if request.method=='POST':\n",
     "        data = request.json\n",
+    "        print(data)\n",
+    "        return json.dumps({'status': \"ok\"})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
     "    \n",
