search server returns results list to ajax

--- a/search_server_68.ipynb
+++ b/search_server_68.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-07T23:13:59.683Z"
+     "start_time": "2018-11-08T11:50:03.339Z"
     },
     "scrolled": true
    },
@@ -26,26 +26,13 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [08/Nov/2018 01:14:03] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Nov/2018 01:21:29] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Nov/2018 01:21:32] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Nov/2018 01:21:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Nov/2018 01:26:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Nov/2018 01:26:22] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'text': 'sdsdjknsc'}\n"
+      "127.0.0.1 - - [08/Nov/2018 13:50:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask\n",
     "from flask import request,render_template,Markup\n",
-    "# from wtforms import Form, TextField, TextAreaField, validators, StringField, SubmitField\n",
     "\n",
     "import json\n",
     "import os \n",
@@ -54,24 +41,22 @@
     "\n",
     "@app.route(\"/\")\n",
     "def hello():\n",
-    "    result = request.form\n",
-    "    return render_template(\"index.html\",result=result)\n",
+    "    return render_template(\"index.html\")\n",
     "\n",
     "\n",
     "@app.route(\"/search\", methods=['GET', 'POST'])\n",
-    "def lang_detect():\n",
+    "def search():\n",
     "    if request.method=='POST':\n",
     "        data = request.json\n",
-    "        print(data)\n",
-    "        return json.dumps({'status': \"ok\"})\n",
+    "        return json.dumps({'status': \"ok\", \"results\": [\"result1\", \"result2\"]})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
     "    \n",
-    "@app.route('/lepus.jooble.com:13568/result',methods = ['POST', 'GET'])\n",
-    "def result():\n",
-    "    if request.method == 'POST':\n",
-    "        result = request.form\n",
-    "    return render_template(\"result.html\",result = result)    \n",
+    "# @app.route('/lepus.jooble.com:13568/result',methods = ['POST', 'GET'])\n",
+    "# def result():\n",
+    "#     if request.method == 'POST':\n",
+    "#         result = request.form\n",
+    "#     return render_template(\"result.html\",result = result)    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    app.run(host='0.0.0.0', port=13568)"
