render search server results list to frontend

--- a/analyzer_server_71.ipynb
+++ b/analyzer_server_71.ipynb
@@ -58,12 +58,13 @@
     "        data = request.json\n",
     "        text = data[\"text\"]\n",
     "        \n",
-    "        lang = json.loads(requests.post('http://127.0.0.1:13567/lang_detect',\n",
-    "                                        json={'text' : text}).text)['lang']\n",
+    "        r_lang = requests.post('http://127.0.0.1:13567/lang_detect', json={'text' : text}).text\n",
+    "        lang = json.loads(r_lang)['lang']\n",
     "        \n",
-    "        stemmed_words = json.loads(requests.post('http://127.0.0.1:13566/stemmer',\n",
-    "                                                 json={'text' : text}).text)['stemmed_words']\n",
+    "        r_stemmed = requests.post('http://127.0.0.1:13566/stemmer', json={'text' : text}).text\n",
+    "        stemmed_words = json.loads()['stemmed_words']\n",
     "        \n",
+    "        r_s\n",
     "        filtered_words = [word for word in word_list if word not in stopwords.words('english')]\n",
     "        \n",
     "        return json.dumps({'status':'ok', 'lang': lang, 'stemmed_words': stemmed_words})\n",
