--- a/search_server_68.ipynb
+++ b/search_server_68.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-08T11:50:03.339Z"
+     "start_time": "2018-11-08T12:53:58.632Z"
     },
     "scrolled": true
    },
@@ -26,7 +26,8 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [08/Nov/2018 13:50:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [08/Nov/2018 14:54:02] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Nov/2018 14:54:05] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -46,9 +47,16 @@
     "\n",
     "@app.route(\"/search\", methods=['GET', 'POST'])\n",
     "def search():\n",
-    "    if request.method=='POST':\n",
+    "    if request.method=='POST':    \n",
     "        data = request.json\n",
-    "        return json.dumps({'status': \"ok\", \"results\": [\"result1\", \"result2\"]})\n",
+    "        \n",
+    "        #  -- do some logging there --\n",
+    "        meta = data['meta']\n",
+    "        #  ---------------------------\n",
+    "        \n",
+    "        search_query = data['query']\n",
+    "        \n",
+    "        return json.dumps({'status': \"ok\", \"results\": [search_query, search_query]})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
     "    \n",
