--- a/search_server_68.ipynb
+++ b/search_server_68.ipynb
@@ -11,30 +11,62 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
+      "62.80.177.194 - - [08/Nov/2018 18:56:14] \"POST /search HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
+      "работники работы\n",
+      "['работник', 'работ']\n",
+      "1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [08/Nov/2018 14:54:02] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Nov/2018 14:54:05] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "62.80.177.194 - - [08/Nov/2018 18:56:58] \"POST /search HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "работающий работник\n",
+      "['работа', 'работник']\n",
+      "1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "62.80.177.194 - - [08/Nov/2018 18:56:59] \"POST /search HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "работающий работник\n",
+      "['работа', 'работник']\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask\n",
     "from flask import request,render_template,Markup\n",
-    "\n",
+    "from nltk.stem.porter import *\n",
+    "from nltk import wordpunct_tokenize\n",
+    "import nltk\n",
+    "import requests\n",
     "import json\n",
     "import os \n",
     "\n",
@@ -55,8 +87,17 @@
     "        #  ---------------------------\n",
     "        \n",
     "        search_query = data['query']\n",
+    "        print(search_query)\n",
+    "        tokens = wordpunct_tokenize(search_query)\n",
+    "        stemmer = nltk.stem.snowball.RussianStemmer()\n",
+    "        singles = [stemmer.stem(word) for word in tokens]\n",
+    "        print(singles)\n",
+    "        r_search = requests.post('http://127.0.0.1:13569/search_query',\n",
+    "                                 json={\"query\": singles, \"meta\":\"lalka\"}).text\n",
+    "        docs = json.loads(r_search)['docs']\n",
     "        \n",
-    "        return json.dumps({'status': \"ok\", \"results\": [search_query, search_query]})\n",
+    "        print(len(docs))\n",
+    "        return json.dumps({'status': \"ok\", \"results\": docs})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
     "    \n",
@@ -72,12 +113,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-6c12afe3f913>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-6c12afe3f913>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    обязанност должност\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "обязанност должност"
+   ]
   },
   {
    "cell_type": "code",
@@ -105,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
