--- a/stemmer_server66.ipynb
+++ b/stemmer_server66.ipynb
@@ -11,43 +11,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [08/Nov/2018 00:30:28] \"\u001b[37mGET /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GET\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [08/Nov/2018 00:30:44] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
+      " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -72,7 +39,7 @@
     "        data = request.json\n",
     "        text = data[\"text\"]\n",
     "        tokens = wordpunct_tokenize(text)\n",
-    "        stemmer = PorterStemmer()\n",
+    "        stemmer = stem.snowball.RussianStemmer()\n",
     "        singles = [stemmer.stem(word) for word in tokens]\n",
     "        return json.dumps({'stemmed_words': singles})\n",
     "    else:\n",
@@ -119,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
