make module "paper"; make index functionality under paper.index; fix some minor bugs; create ipynb for hh.ru indexing; create "in_progress" folder for junk

--- a/in_progress/lang_detection_server_67.ipynb
+++ b/in_progress/lang_detection_server_67.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-07T15:46:05.709Z"
+     "start_time": "2018-11-10T14:44:12.459Z"
     }
    },
    "outputs": [
@@ -28,154 +28,195 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13567/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [07/Nov/2018 17:48:45] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:46:55] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"How are you doing?\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:50:02] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:47:01] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"text\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:50:23] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:50:24] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"text\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:50:32] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:50:34] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"text\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:50:40] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:50:44] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"text\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:51:24] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:50:50] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"text\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:51:29] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:51:14] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"text\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:53:47] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:52:47] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"How are you doing?\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:54:20] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:52:59] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"How are you doing?\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:57:32] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:54:15] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"How are you doing?\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [07/Nov/2018 17:57:44] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Nov/2018 16:55:29] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"text\": \"How are you doing?\"}\n"
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [10/Nov/2018 16:57:22] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [10/Nov/2018 16:57:29] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"text\": \"How are you doing\"}\n",
+      "['How', 'are', 'you', 'doing']\n"
      ]
     }
    ],
@@ -204,7 +245,7 @@
     "        data = request.json\n",
     "        print(json.dumps(data))\n",
     "        text = data[\"text\"]\n",
-    "        wordpunct_tokenize(text)\n",
+    "        print(wordpunct_tokenize(text))\n",
     "        languages_ratios = {}\n",
     "        tokens = wordpunct_tokenize(text)\n",
     "        words = [word.lower() for word in tokens]\n",
@@ -241,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
