--- a/in_progress/stemmer_server66.ipynb
+++ b/in_progress/stemmer_server66.ipynb
@@ -2,26 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-07T22:29:43.525Z"
+     "end_time": "2018-11-10T14:57:42.309890Z",
+     "start_time": "2018-11-10T14:31:37.840842Z"
     },
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [10/Nov/2018 16:31:40] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POST\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [10/Nov/2018 16:49:50] \"\u001b[37mGET /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GET\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask\n",
     "from flask import request\n",
-    "from nltk.stem.porter import *\n",
+    "from nltk import stem\n",
     "from nltk import wordpunct_tokenize\n",
     "\n",
     "import json\n",
@@ -39,11 +73,11 @@
     "        data = request.json\n",
     "        text = data[\"text\"]\n",
     "        tokens = wordpunct_tokenize(text)\n",
-    "        stemmer = stem.snowball.RussianStemmer()\n",
+    "        stemmer = stem.snowball\n",
     "        singles = [stemmer.stem(word) for word in tokens]\n",
     "        return json.dumps({'stemmed_words': singles})\n",
     "    else:\n",
-    "        return \"ERROR\"\n",
+    "        return \"provide json {'text': 'text_to_stemm_here'}\"\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    app.run(host='0.0.0.0', port=13566)"
@@ -86,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
