--- a/in_progress/index_69.ipynb
+++ b/in_progress/index_69.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-10T14:57:42.309890Z",
-     "start_time": "2018-11-10T14:31:37.840842Z"
-    },
-    "scrolled": true
+     "start_time": "2018-11-14T10:25:32.380Z"
+    }
    },
    "outputs": [
     {
@@ -26,72 +24,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [10/Nov/2018 16:31:40] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [10/Nov/2018 16:49:50] \"\u001b[37mGET /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GET\n"
+      " * Running on http://0.0.0.0:13569/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [14/Nov/2018 12:34:48] \"\u001b[37mPOST /search_query HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 12:59:36] \"\u001b[37mPOST /search_query HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 13:00:55] \"\u001b[37mPOST /search_query HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [14/Nov/2018 13:01:01] \"\u001b[37mPOST /search_query HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask\n",
     "from flask import request\n",
-    "from nltk import stem\n",
-    "from nltk import wordpunct_tokenize\n",
-    "\n",
     "import json\n",
-    "from nltk.stem import *\n",
+    "\n",
+    "\n",
+    "\n",
     "app = Flask(__name__)\n",
     "\n",
-    "@app.route(\"/\")\n",
-    "def hello():\n",
-    "    return \"Hello World!\"\n",
     "\n",
-    "@app.route(\"/stemmer\", methods=['GET','POST'])\n",
-    "def stemmer():\n",
-    "    print(request.method)\n",
-    "    if request.method=='POST':\n",
+    "@app.route(\"/search_query\", methods=['GET', 'POST'])\n",
+    "def inverted_index():\n",
+    "    \"\"\"\n",
+    "    Receive: stemmed preprocessed tokens from search server\n",
+    "    Return: docs ids searched in inverted index \n",
+    "    \"\"\"\n",
+    "    if request.method == 'POST':\n",
     "        data = request.json\n",
-    "        text = data[\"text\"]\n",
-    "        tokens = wordpunct_tokenize(text)\n",
-    "        stemmer = stem.snowball\n",
-    "        singles = [stemmer.stem(word) for word in tokens]\n",
-    "        return json.dumps({'stemmed_words': singles})\n",
+    "        \n",
+    "        query = data[\"query\"]\n",
+    "        meta = data[\"meta\"]\n",
+    "        tokens = query.split(\" \")\n",
+    "        \n",
+    "        ids = index.search(tokens)\n",
+    "        \n",
+    "        return json.dumps({'status':'ok',\n",
+    "                           'doc_ids': ids})\n",
     "    else:\n",
-    "        return \"provide json {'text': 'text_to_stemm_here'}\"\n",
+    "        return docstring + \" by post methot to url /search_query\"\n",
+    "\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=13566)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "singles = [stemmer.stem(plural) for plural in plurals]\n"
+    "    app.run(host='0.0.0.0', port=13569)"
    ]
   },
   {
