--- a/search_68.ipynb
+++ b/search_68.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-13T12:57:28.040574Z",
-     "start_time": "2018-11-13T12:37:42.927280Z"
+     "start_time": "2018-11-14T12:56:10.335Z"
     },
     "scrolled": true
    },
@@ -27,61 +26,123 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [13/Nov/2018 14:55:56] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [14/Nov/2018 14:56:31] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'query': 'стаж', 'meta': 'meta data'}\n"
+      "['о']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [14/Nov/2018 14:57:37] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['о']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [14/Nov/2018 15:00:22] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['о']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [14/Nov/2018 15:00:27] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['тематик']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [14/Nov/2018 15:00:35] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['тематик', 'дан']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [14/Nov/2018 15:01:26] \"\u001b[33mGET /gen204?invalidResponse=q=https%3A%2F%2Ftranslate.googleapis.com%2Ftranslate_a%2Fsingle%3Fclient%3Dgtx%26s,ql=190,r=,rl=0 HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [14/Nov/2018 15:01:26] \"\u001b[33mGET /gen204?invalidResponse=q=https%3A%2F%2Ftranslate.googleapis.com%2Ftranslate_a%2Fsingle%3Fclient%3Dgtx%26s,ql=173,r=,rl=0 HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [14/Nov/2018 15:01:26] \"\u001b[33mGET /gen204?invalidResponse=q=https%3A%2F%2Ftranslate.googleapis.com%2Ftranslate_a%2Fsingle%3Fclient%3Dgtx%26s,ql=196,r=,rl=0 HTTP/1.1\u001b[0m\" 404 -\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask\n",
     "from flask import request, render_template\n",
-    "# from nltk.stem.porter import *\n",
-    "# from nltk import wordpunct_tokenize\n",
-    "# import nltk\n",
+    "from paper.utils import post_request\n",
     "import requests\n",
     "import json\n",
-    "# import os \n",
+    "\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
     "@app.route(\"/\")\n",
     "def hello():\n",
+    "    \"\"\"Render user interface with search form from templates\"\"\"\n",
     "    return render_template(\"index.html\")\n",
     "\n",
     "\n",
     "@app.route(\"/search\", methods=['GET', 'POST'])\n",
     "def search():\n",
     "    \"\"\"\n",
-    "    search server is a manager of all apis needed for search\n",
+    "    Search server provide UI hosting and all search workflow\n",
+    "    Receive ajax post request from user interface with meta and search \n",
     "    \n",
     "    \"\"\"\n",
     "    if request.method=='POST':    \n",
     "        data = request.json\n",
-    "        print(data)\n",
     "        #  -- do some logging there --\n",
     "        meta = data['meta']\n",
     "        #  ---------------------------\n",
     "        \n",
     "        #  ------ analyzing query -----\n",
-    "        search_query = data['query']\n",
+    "        query = data['query']\n",
+    "        r_analyzing_query = requests.post('http://127.0.0.1:13571/analyze', json={'textes' : [query]}).text\n",
     "        \n",
-    "#         tokens = wordpunct_tokenize(search_query)\n",
-    "#         stemmer = nltk.stem.snowball.RussianStemmer()\n",
-    "#         singles = [stemmer.stem(word) for word in tokens]\n",
-    "#         print(singles)\n",
-    "        \n",
-    "        #  ------- search in inversed index --------\n",
-    "        r_search = requests.post('http://127.0.0.1:13569/search_query',\n",
-    "                                 json={\"query\": search_query, \"meta\":\"lalka\"}).text\n",
-    "        \n",
-    "        docs = json.loads(r_search)['docs']\n",
-    "#         print(docs)\n",
+    "        stemmed_query = json.loads(r_analyzing_query)['stemmed_docs'][0]\n",
+    "        query_lang = json.loads(r_analyzing_query)['langs'][0]\n",
+    "        # ------- search and ranking docs -----\n",
+    "        query_json = {\"stemmed_query\": stemmed_query,\n",
+    "                      \"meta\":\"lalka\"}\n",
+    "        r_rank = requests.post('http://127.0.0.1:13570/rank', json=query_json).text\n",
+    "        docs = json.loads(r_rank)[\"ranked\"]\n",
+    "\n",
     "        return json.dumps({'status': \"ok\", \"results\": docs})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
