--- a/updater_72.ipynb
+++ b/updater_72.ipynb
@@ -52,47 +52,31 @@
     "\n",
     "app = Flask(__name__)\n",
     "\n",
-    "@app.route(\"/\")\n",
-    "def hello():\n",
-    "    return 'k'\n",
-    "\n",
-    "\n",
-    "@app.route(\"/search_query\", methods=['GET', 'POST'])\n",
-    "def revers_index():\n",
-    "    if request.method == 'POST':\n",
-    "        data = request.json\n",
-    "        \n",
-    "        query = data[\"query\"]\n",
-    "#         print(query)\n",
-    "        meta = data[\"meta\"]\n",
-    "        tokens = query.split(\" \")\n",
-    "        \n",
-    "        ids = index.search(tokens)\n",
-    "        \n",
-    "        docs = index.get_docs(ids)\n",
-    "#         print(docs)\n",
-    "        return json.dumps({'status':'ok', 'docs': docs})\n",
-    "    else:\n",
-    "        return docstring + \" by post methot to url /search_query\"\n",
-    "\n",
-    "    \n",
+    "   \n",
     "@app.route(\"/update\", methods=['GET', 'POST'])\n",
     "def update():\n",
+    "    \"\"\"\n",
+    "    Receive: document (textes yet)\n",
+    "    Returns: ids of new documents in index\n",
+    "    \"\"\"\n",
     "    if request.method == 'POST':\n",
     "        data = request.json\n",
-    "        docs = data[\"docs\"]\n",
-    "        stemmed = data[\"stemmed\"]\n",
-    "#         print(docs[:3])\n",
-    "        ids_of_updated = index.update_index(docs, stemmed)\n",
+    "        textes = data[\"textes\"]\n",
+    "        # doc is not a class yet\n",
+    "        r_analyzing_query = requests.post('http://127.0.0.1:13571/analyze', json={'textes' : textes}).text\n",
+    "        stemmed_docs = json.loads(r_analyzing_query)['stemmed_docs']\n",
+    "        langs = json.loads(r_analyzing_query)['langs']\n",
+    "   \n",
+    "        ids_of_updated = index.update_index(docs, stemmed_docs)\n",
     "        \n",
     "        return json.dumps({'status':'ok', \"ids\": ids_of_updated})\n",
     "    else:\n",
-    "        return docstring + \" by post methot to url /search_query\"\n",
+    "        return \"Make post to update\"\n",
     "    \n",
     "\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=13569)"
+    "    app.run(host='0.0.0.0', port=13572)"
    ]
   },
   {
@@ -110,6 +94,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
