make documentation of paper.index module

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -68,7 +68,18 @@
     "\n",
     "There a module paper.index where basic functions for working with index are provided:\n",
     "\n",
-    "\n"
+    "Function | Arguments | Description\n",
+    "------------ | ------------- | --------\n",
+    "`update_index(docs, stemmed)` | **docs** - list or array of strs <br> **stemmed** - list of lists with token strs | Make indexing of textes (inverted and forward)<br>Return: list of ids of updated docs\n",
+    "`from_eval_texts(path='../../Data/eval_texts.csv')`| **path** - path to eval_textes.csv | Make update from eval textes<br>Return: list of ids of updated docs\n",
+    "`search(tokens)` | **tokens** - stemmed tokens for search  | Make search (boolean AND - intersect of sets)<br>Return: returns set of doc_ids strs\n",
+    "`get_docs(ids, is_str=False)` | **ids** - int ids of docs if **is_str=False**,<br>in other case: **ids** - strs of ids like 'doc:id' | Get docs by their Returns: list of strs (documents textes)\n",
+    "\n",
+    "\n",
+    "# TODO\n",
+    "- Make doc class\n",
+    "- Snippets api\n",
+    "- Make "
    ]
   }
  ],
