--- a/readme.ipynb
+++ b/readme.ipynb
@@ -27,10 +27,12 @@
     "- Rank service (rank_70) with preprocessed query\n",
     "\n",
     "### analyzer_71\n",
-    "Analyzer provide stemm, tokenize and lang detect workflow\n",
+    "Analyzer provide **stemm, tokenize and lang detect** workflow\n",
+    "> Later will be 3 separate services (maybe)\n",
     "    \n",
     "Receive: list of lists of textes\n",
     "Return: list of lists of stemmed tokens for each document & list of languages codes\n",
+    "\n",
     "Make call to:\n",
     "- Language detection service (lang_detection_67) with query\n",
     "- Stemmer service (stemmer_66) with query\n",
@@ -66,7 +68,7 @@
     "## Index\n",
     "Index is a Redis database\n",
     "\n",
-    "There a module paper.index where basic functions for working with index are provided:\n",
+    "There is module paper.index where basic functions for working with index are provided:\n",
     "\n",
     "Function | Arguments | Description\n",
     "------------ | ------------- | --------\n",
@@ -77,9 +79,12 @@
     "\n",
     "\n",
     "# TODO\n",
-    "- Make doc class\n",
-    "- Snippets api\n",
-    "- Make "
+    "- [] Make doc class\n",
+    "- [] Snippets api\n",
+    "- [] Make other functions for index like delete(ids) etc.\n",
+    "- [] Make doc as a HASH instance in redis database\n",
+    "- [] Config file for ports and other stuff\n",
+    "- [] Config for redis db"
    ]
   }
  ],
